--- a/index.html
+++ b/index.html
@@ -24,15 +24,28 @@
           <button><span>Try it free 7 days </span>then $20/mo. thereafter</button>
         <div class="form">
           <form>
-            <input type="text" placeholder="First Name" id="first-name">
-            <input type="text" placeholder="Last Name" id="last-name">
-            <input type="email" id="email" placeholder="Email Address">
-            <input type="password" id="password" placeholder="Password">
-            <input type="submit" value="CLAIM YOUR FREE TRIAL" id="submit">
+            <div class="form-element">
+               <input type="text" placeholder="First Name" id="first-name">
+            </div>
+            <div class="form-element">
+              <input type="text" placeholder="Last Name" id="last-name">
+            </div>
+            <div class="form-element">
+              <input type="email" id="email" placeholder="Email Address">
+            </div>
+            <div class="form-element">
+              <input type="password" id="password" placeholder="Password">
+            </div>
+            <div class="form-element">
+              <input type="submit" value="CLAIM YOUR FREE TRIAL" id="submit">
+            </div>
           </form>
-          <footer>
+          <div class="footer">
+            <small>
             By clicking the button, you are agreeing to out <span>Terms and Services</span>
-          </footer>
+          </small>
+          </div>
+          
         </div>
       </div>
     </section>
