add class name to small

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           <form>
             <div class="form-element">
                <input type="text" placeholder="First Name" id="first-name">
+               
             </div>
             <div class="form-element">
               <input type="text" placeholder="Last Name" id="last-name">
@@ -41,7 +42,7 @@
             </div>
           </form>
           <div class="footer">
-            <small>
+            <small class="terms">
             By clicking the button, you are agreeing to out <span>Terms and Services</span>
           </small>
           </div>
